2008-03-14 Ian Rutt
 * Bump version to 1.0.9 (new development series)

2008-03-14 Ian Rutt
 * configure.in: bump version to 1.0.8
 * NEWS: update
	
2008-03-13 Ian Rutt
 * Fixed bug in temperature basal boundary condition. Sliding heat
 generation terms were wrong. EISMINT 2 tests G and H now look better.

2008-03-01 Ian Rutt
 * Fixed precision mismatch build bug in glint_example_clim.F90

2008-02-19 Ian Rutt
 * Bump version to 1.0.7 (new development series)

2008-01-23 Ian Rutt
 * configure.in: bump version to 1.0.6
 * NEWS: update

2008-01-23 Ian Rutt
 * Changed sine-wave fitting to temperature to be true by default.

2008-01-21 Ian Rutt
 * Fixed problem with GLINT output files in restart code

2008-01-18 Ian Rutt
 * Fixed precision bug in complex restart code.

2008-01-17 Ian Rutt
 * Fixed build problem with restarts (added handling of complex arrays)
 * This is currently untested.
 * Made single-precision compiling a configure option (use --enable-sp)

2008-01-16 Ian Rutt
 * Modified configure.in and bootstrap to reflect Magi's changes to main
   trunk. These allow configuration with later versions of automake
 * Fixed limitations of this code (failed if particular combinations of
   versions of automake installed)

2007-10-23 Ian Rutt
 * glint.F90: added basic capability to extract raw forcing climate for
   diagnostic purposes
 * Fixed bug in glint_example_clim.F90 that prevented single-precision builds
	
2007-08-31 Ian Rutt
 * Thorough revamp of glint example. Simplified so that all data must be
 on the same grid now, and streamlined code.

2007-08-29 Ian Rutt
 * Changed precip anomaly coupling to be additive, but with option to use
 multiplicative version instead.

2007-08-28 Ian Rutt
 * Fixed bugs with anomaly coupling - should all be working now.

2007-08-23 Ian Rutt
 * Fixed a couple of problems with anomaly coupling

2007-08-22 Ian Rutt
 * MP-interpolation broke single-precision compilation. Fixed that...

2007-08-20 Ian Rutt